examples/test/testpolicy16421.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16421
  namespace: namespace322
spec:
  podSelector:
    matchLabels:
      key23: value15
      key36: value16
      key28: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value45
      podSelector:
        matchLabels:
          key27: value6
          key43: value29
          key36: value15
